--- a/style.css
+++ b/style.css
@@ -71,6 +71,15 @@ input::placeholder,input{
     margin-bottom: 20px;
      
 }
+.input-group.error input{
+     border: 1px solid hsl(0, 100%, 74%);
+}
+.input-group.error .message{
+    color: hsl(0, 100%, 74%);
+}
+.input-group.error input::placeholder{
+    color: hsl(0, 100%, 74%);
+}
 .button{
     background-color: hsl(154, 59%, 51%);
     width: 100%;
