--- a/tip-calculator-app-main/style.css
+++ b/tip-calculator-app-main/style.css
@@ -59,11 +59,15 @@ label, input{
     padding: 10px 20px;
 background-color: var(--clr-neutral-4);
 border: none;
+font-family: var(--primary-font);
+columns: var(--clr-neutral-1);
+font-size: var(--font-input-size);
+text-align: right;
 }
 .tips-group{
     display: flex;
     flex-wrap: wrap;
-    gap: 20px;
+
 
 }
 .tips-group .button{
@@ -74,4 +78,60 @@ border: none;
     font-size: var(--font-input-size);
     flex: 1;
     font-size: 14.5px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    width: calc(33.33%-20px);
+    font-family: var(--primary-font);
+}
+.tips-group .button:hover{
+    background-color: var(--clr-neutral-4);
+    color: var(--clr-neutral-1);
+    cursor: pointer;
+    transition: all 0.2s;
+}
+.calculation-result{
+    border-radius: 5px;
+    width: 50%;
+    padding: 30px 40px;
+    background-color: var(--clr-neutral-1);
+    display: flex;
+    flex-direction: column;
+    
+
+}
+.calculation-amount{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 30px;
+}
+.main-title{
+    color: var(--clr-neutral-4);
+    font-size: 18px;
+}
+.subtitle{
+    color: var(--clr-neutral-3);
+    font-size: 14px;
+}
+.amount{
+    font-size: 30px;
+    color: var(--clr-primary);
+}
+.calculation-result .button{
+    box-sizing: border-box;
+   background-color: var(--clr-neutral-4);
+   padding: 10px 20px;
+   text-transform: uppercase;
+   border: none;
+   border-radius: 5px;
+   font-size: 18px;
+   margin-top: auto;
+   width: 100%;
+   font-family: var(--font-input-size);
+
+}
+.calculation-result .button:hover{
+    cursor: pointer;
+    background-color: var(--clr-primary);
+    transition: all 0.2s;
+    color: var(--clr-neutral-4);
 }
